# stoobly-agent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  ai_rules.yaml  deploy.sh  docker-entrypoint.sh  pyproject.toml  pytest.ini  setup.py  test.sh
.cursor/: cli.json
.cursor/rules/: cli-development.mdc  project-structure.mdc  python-coding-standards.mdc  request-logging.mdc  safety-and-compliance.mdc  scaffolding-system.mdc
.github/workflows/: ci-tests.yaml  cursor-code-review.yml  publish-artifacts.yaml  release-drafter.yml  tests.yaml
docs/: context-dir-services.md  intercept-mode-test.md  lifecycle_hooks.md  mock-request-matching.md  scaffold-docker-tmp-mount.md  scaffold-workflow-rewrite.md
stoobly/: api.py  cli.py  proxy.py  record.py
stoobly-agent/: api.py  cli.py  hot_reload.py
stoobly-agent/app/: statuses_controller.py
stoobly-agent/lib/: settings.py
stoobly-agent/public/: CHANGELOG.md  aliases-aliases-module-es2015.js  aliases-aliases-module-es5.js  auth-pages-forgot-password-forgot-password-module-es2015.js  auth-pages-forgot-password-forgot-password-module-es5.js.map  auth-pages-register-register-module-es5.js  auth-pages-register-register-module-es5.js.map  common-es5.js  default~aliases-aliases-module~endpoints-endpoints-module~organizations-organizations-module~project~11ec6de4-es5.js  default~aliases-aliases-module~endpoints-endpoints-module~organizations-organizations-module~project~79418c77-es2015.js  default~aliases-aliases-module~endpoints-endpoints-module~organizations-organizations-module~project~79418c77-es5.js.map  default~aliases-aliases-module~endpoints-endpoints-module~organizations-organizations-module~project~eb28f6f5-es2015.js  default~aliases-aliases-module~endpoints-endpoints-module~organizations-organizations-module~project~eb28f6f5-es2015.js.map  default~endpoints-endpoints-module~requests-requests-module~scenarios-scenarios-module-es5.js  default~organizations-organizations-module~projects-projects-module~requests-requests-module~scenari~04d380cf-es2015.js  default~organizations-organizations-module~projects-projects-module~requests-requests-module~scenari~04d380cf-es2015.js.map  default~organizations-organizations-module~projects-projects-module~users-users-module-es2015.js  default~organizations-organizations-module~projects-projects-module~users-users-module-es5.js  default~organizations-organizations-module~projects-projects-module~users-users-module-es5.js.map  default~organizations-organizations-module~subscriptions-pages-buy-buy-module~users-users-module-es2015.js.map  default~organizations-organizations-module~subscriptions-pages-buy-buy-module~users-users-module-es5.js  default~organizations-organizations-module~subscriptions-pages-buy-buy-module~users-users-module-es5.js.map  default~requests-requests-module~scenarios-scenarios-module~subscriptions-pages-buy-buy-module-es2015.js  default~requests-requests-module~scenarios-scenarios-module~subscriptions-pages-buy-buy-module-es2015.js.map  default~requests-requests-module~scenarios-scenarios-module~subscriptions-pages-buy-buy-module-es5.js  default~requests-requests-module~scenarios-scenarios-module~subscriptions-pages-buy-buy-module-es5.js.map  endpoints-endpoints-module-es2015.js  error-pages-404-error-404-module-es2015.js  error-pages-404-error-404-module-es5.js  home-home-module-es2015.js  home-home-module-es2015.js.map  main-es5.js  organizations-organizations-module-es5.js.map  projects-projects-module-es2015.js  projects-projects-module-es2015.js.map  requests-requests-module-es2015.js.map  requests-requests-module-es5.js  runtime-es5.js.map  scenarios-scenarios-module-es5.js.map  subscriptions-pages-buy-buy-module-es5.js.map  (+4 more)
stoobly/app/: configs_controller.py  statuses_controller.py
stoobly/config/: settings.yml
stoobly/lib/: agent_api.py  joined_request.py  logger.py  mitmproxy_request_adapter.py  request_string.py  response_string.py  settings.py  stoobly_api.py
stoobly/public/: README.md  aliases-aliases-module-es2015.js.map  common-es2015.js  (+72 more)
stoobly_agent/: __init__.py  __main__.py  api.py  cli.py  intercept_handler.py  mock.py  proxy.py  record.py
(+967 files in other folders)
