[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
authors = [
    "Matt Le <themathewle@gmail.com>"
]
description = "Record, mock, and test HTTP(s) requests. CLI agent for Stoobly"
license = "Apache License 2.0"
name = "stoobly-agent"
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.10"

click = ">=7.0.0,<8.0.0"
diff-match-patch = "^20230430"
distro = ">=1.6.0,<1.7.0"
dnspython = ">=2.6.1,<2.7.0"
httptools = ">=0.4.0"
jmespath = ">=1.0.0"
mergedeep = ">=1.3.0,<1.3.4"
mitmproxy = ">=10.0.0,<11.0.0"
openapi-core = ">=0.19.0,<0.20.0"
multipart = "^0.2.5"
python-dotenv = "^1.0.1"
pyyaml = ">=6.0.1"
requests = ">=2.31.0"
stoobly_orator = ">=0.9.12"
tabulate = ">=0.8.8"
watchdog = ">=2.1.0,<=2.1.3"
werkzeug = "<3.0.0" # Dependency resolution
yamale = ">=4.0.0,<=4.0.2"

[tool.poetry.group.test.dependencies]
mock = ">=5.0.0"
pytest = ">=7.1.0"

[tool.poetry.scripts]
stoobly-agent = "stoobly_agent.cli:main"

[tool.poetry.urls]
Homepage = "https://github.com/Stoobly/stoobly-agent"
