[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
authors = [
    "Matt Le <themathewle@gmail.com>"
]
description = "Record, mock, and test HTTP(s) requests. CLI agent for Stoobly"
license = "Apache License 2.0"
name = "stoobly-agent"
readme = "README.md"
version = "1.5.0"

[tool.poetry.dependencies]
python = "^3.10"

click = "^8.1.0"
docker = ">=7.1.0,<8.0"
diff-match-patch = "^v20241021"
distro = ">=1.9.0,<1.10"
dnspython = ">=2.7.0,<2.8"
httptools = ">=0.4.0"
jmespath = ">=1.0.0"
mergedeep = ">=1.3,<1.4"
mitmproxy = ">=11.0.2,<11.1.0"
openapi-core = ">=0.19.0,<0.20.0"
multipart = ">=1.2.1,<1.3"
python-dotenv = "^1.0.1"
pyyaml = ">=6.0.1"
requests = ">=2.31.0"
stoobly_orator = ">=0.9.12"
tabulate = ">=0.8.8"
watchdog = ">=6.0.0,<=6.1.0"
yamale = ">=6.0.0,<=7.0.0"

[tool.poetry.group.test.dependencies]
mock = ">=5.0.0"
pytest = ">=7.1.0"

[tool.poetry.scripts]
stoobly-agent = "stoobly_agent.cli:main"

[tool.poetry.urls]
Homepage = "https://github.com/Stoobly/stoobly-agent"
